# HeuristicWorm

./: CMakeLists.txt  README.md
src/: Helpers.cpp  Helpers.h  WDiffEvolution.cpp  WDiffEvolution.h  WDiffEvolutionSA.cpp  WDiffEvolutionSA.h  WEvolutionStrategy.cpp  WEvolutionStrategy.h  WEvolutionStrategyModified.cpp  WEvolutionStrategyModified.h  WExternalSolver.cpp  WExternalSolver.h  WHeuristicAlg.hpp  WJordanSolver.cpp  WJordanSolver.h  WLeMassonSimulator.cpp  WLeMassonSimulator.h  WPopulation.hpp  WPureRandom.cpp  WPureRandom.h  WRandom.cpp  WRandom.h  WSimpleSimulator.cpp  WSimpleSimulator.h  WSimulator.cpp  WSimulator.h  WSolver.h  WTestData.h  main.cpp
